fixed aligning finished animation

--- a/src/apps/dailyMeetings/Daily/styles.scss
+++ b/src/apps/dailyMeetings/Daily/styles.scss
@@ -33,7 +33,7 @@
       border-radius: 12px;
       text-align: left;
       .item {
-        img, content {
+        img, .content {
           vertical-align: middle;
         }
       }
