--- a/src/sass/list.scss
+++ b/src/sass/list.scss
@@ -61,6 +61,7 @@
 	
 			}
 			.list-controls {
+				transition: 0.3s;
 				position: absolute;
 				right: 0px;
 				top: 0px;
